# my-claude-skills

./: .gitignore  LICENSE  README.md
.claude-plugin/: marketplace.json
.claude/agents/: sdlc-shipper.md
.claude/skills/commit-policy/: SKILL.md
.claude/skills/gh-projects/: SKILL.md  reference.md
.claude/skills/gh-sdlc/: SKILL.md
.claude/skills/issue-policy/: SKILL.md
.claude/skills/pr-policy/: SKILL.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: test.yml
plugins/ccgraft/: README.md  pyproject.toml
plugins/ccgraft/.claude-plugin/: plugin.json
plugins/ccgraft/hooks/: auto_export.sh  hooks.json
plugins/ccgraft/skills/export-session/: SKILL.md
plugins/ccgraft/skills/import-session/: SKILL.md
plugins/ccgraft/skills/restore-backup/: SKILL.md
plugins/ccgraft/src/ccgraft/: __init__.py  _io.py  config.py  errors.py  exporter.py  importer.py  manifest.py  paths.py  session.py  snapshot.py
plugins/ccgraft/src/ccgraft/cli/: __init__.py  export.py  import_.py  restore.py
plugins/ccgraft/tests/: conftest.py  test_bin_scripts.py  test_cli_export.py  test_cli_import.py  test_cli_restore.py  test_config.py  test_errors.py  test_exporter.py  test_exporter_pipeline.py  test_importer.py  test_importer_extended.py  test_io.py  test_manifest.py  test_paths.py  test_session.py  test_session_extended.py  test_snapshot.py  test_snapshot_extended.py
plugins/gh-sdlc/: README.md
plugins/hypersaint/: README.md
skills/commit-policy/: SKILL.md
skills/gh-projects/: SKILL.md
skills/pr-policy/: SKILL.md
skills/workflow-orchestrator/: SKILL.md
(+20 files in other folders)
